--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum dolor doloremque molestiae assumenda adipisci error corporis quaerat, accusamus natus velit.</p>
         </div>
     </section>
-    <section class="newsletter">
+    <section class="newsletter form">
         <div class="container grid">
             <h1>Subscribe to our Newsletter</h1>
             <form >
